fix: overflow and padding issues of sections

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   font-weight: 300;
   background-color: #222831;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 ::-moz-selection {
@@ -189,11 +190,12 @@ h5,
 
 .site-section {
   padding: 2.5em 0;
+  padding-left: 10px;
 }
 
 @media (min-width: 768px) {
   .site-section {
-    padding: 5em 0;
+    padding: 2em 0;
   }
 }
 
